--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       ></button>
     </div>
 
-    <script src="js/gallery-items.js" type="module"></script>
+    <script src="./js/Array-src-gallery.js"></script>
+    <script src="js/gallery-items.js"></script>
   </body>
 </html>
